added NDA slides

--- a/bib/bib.bib
+++ b/bib/bib.bib
@@ -1,8 +1,33 @@
-
-
 @Book{lewis1993,
   author = 	 {{E. E. Lewis and W.F. Miller, Jr.}},
   title = 	 {{Computational Methods of Neutron Transport}},
   publisher = 	 {American Nuclear Society},
   year = 	 {1993},
+}
+
+@inproceedings{Hammer2017,
+abstract = {The nonlinear diffusion acceleration (NDA) is an effective scheme to increase convergence for highly diffusive problems. However, for second order transport equations, the scheme is not yet defined in voids. In this paper we derive modifications to the NDA to handle problems containing void regions. A Fourier analysis shows that the newly developed modifications accelerates unconditionally for scattering ratios smaller than one. Numerical test with Reed's problem showed that the NDA scheme results in a non-constant flux shape in the void regions. Further investigations revealed that this coarse mesh problem is caused by the interface coupling between void and material regions.},
+author = {Hammer, Hans R and Morel, Jim E. and Wang, Yaqi},
+booktitle = {Mathematics and Computation2},
+file = {:home/josh/Pictures/P031S01-06HammerH.pdf:pdf},
+keywords = {FEM Formulation},
+mendeley-groups = {Transport EQ/NDA,Transport EQ/2nd Order,1. Dissertation/Acceleration Schemes/NDA,1. Dissertation/Second-Order TE/LS/WLS},
+mendeley-tags = {FEM Formulation},
+title = {{Nonlinear Diffusion Acceleration in Voids for the Weighted Least-Square Transport Equation}},
+year = {2017}
+}
+
+
+@article{Morel1999,
+abstract = {The traditional second-order self-adjoint forms of the transport equation are the even- and odd-parity equations. A useful alternative to these equations exists in the form of the second-order self-adjoint equation that has the angular flux as its unknown. The numerical advantages and disadvantages of this equation are contrasted both theoretically and computationally with those of the even- and odd-parity equations.},
+author = {Morel, J E and Mcghee, J M},
+doi = {10.13182/NSE132-312},
+file = {:home/josh/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Morel, Mcghee - 1999 - A Self-Adjoint Angular Flux Equation.pdf:pdf},
+issn = {0003018X},
+journal = {Nuclear Science and Engineering},
+mendeley-groups = {Transport EQ/2nd Order,Transport EQ/2nd Order/SAAF,1. Dissertation},
+pages = {312--325},
+title = {{A Self-Adjoint Angular Flux Equation}},
+volume = {132},
+year = {1999}
 }
