--- a/sty/commands.sty
+++ b/sty/commands.sty
@@ -12,6 +12,9 @@
 \renewcommand{\det}[1]{\text{det}(#1)}
 \renewcommand{\vec}[1]{\mathbf{#1}} % Make vectors bold
 
+% Matrices
+\newcommand{\mat}[1]{\mathbf{#1}} % matrices bold
+
 % Matrix or vector dimension
 \newcommand{\ins}[3]{\in \mathbb{#1}^{#2 \times #2}}
 
