--- a/sty/commands.sty
+++ b/sty/commands.sty
@@ -19,6 +19,7 @@
 \newcommand{\ins}[3]{\in \mathbb{#1}^{#2 \times #2}}
 
 % Various Variables
+\newcommand{\lwn}{\tilde{\nu}}
 \newcommand{\rvec}{\vec{r}}
 \newcommand{\oh}{\hat{\Omega}}
 \newcommand{\ohv}{\vec{\oh}}
