--- a/bib/bib.bib
+++ b/bib/bib.bib
@@ -4,6 +4,18 @@
   publisher = 	 {American Nuclear Society},
   year = 	 {1993},
 }
+@article{Adams2002,
+abstract = {In discrete-ordinates (SN) simulations of large problems involving linear interactions between radiation and matter, the underlying linear Boltzmann problem is discretized and the resulting system of algebraic equations is solved iteratively. If the physical system contains subregions that are optically thick with small absorption, the simplest iterative process, Source Iteration, is inefficient and costly. During the past 40 years, significant progress has been achieved in the development of acceleration methods that speed up the iterative convergence of these problems. This progress consists of (i) a theory to derive the acceleration strategies, (ii) a theory to predict the convergence properties of the new strategies, and (iii) the implementation of these concepts in production computer codes. In this Review we discuss the theoretical foundations of this work, the important results that have been accomplished, and remaining open questions.},
+author = {Adams, Marvin L. and Larsen, Edward W.},
+doi = {10.1016/S0149-1970(01)00023-3},
+file = {:home/josh/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Adams, Larsen - 2002 - Fast iterative methods for discrete-ordinates particle transport calculations.pdf:pdf},
+issn = {01491970},
+journal = {Progress in Nuclear Energy},
+keywords = {Acceleration,Discrete ordinates,Iteration,Transport},
+mendeley-groups = {Transport EQ/Discretization/DO,0. Reference/Reviews},
+title = {{Fast iterative methods for discrete-ordinates particle transport calculations}},
+year = {2002}
+}
 
 @inproceedings{Hammer2017,
 abstract = {The nonlinear diffusion acceleration (NDA) is an effective scheme to increase convergence for highly diffusive problems. However, for second order transport equations, the scheme is not yet defined in voids. In this paper we derive modifications to the NDA to handle problems containing void regions. A Fourier analysis shows that the newly developed modifications accelerates unconditionally for scattering ratios smaller than one. Numerical test with Reed's problem showed that the NDA scheme results in a non-constant flux shape in the void regions. Further investigations revealed that this coarse mesh problem is caused by the interface coupling between void and material regions.},
