removed handout from beamer

--- a/qual_presentation.tex
+++ b/qual_presentation.tex
@@ -1,6 +1,6 @@
 % NEUTRONICS BEAMER TEMPLATE -- START EDITING IN LINE 90
-\documentclass[xcolor=x11names, compress, handout]{beamer}
-%\documentclass[xcolor=x11names, compress]{beamer}
+%\documentclass[xcolor=x11names, compress, handout]{beamer}
+\documentclass[xcolor=x11names, compress]{beamer}
 \usepackage{pgfpages}
 \usefonttheme[onlymath]{serif}
 \setbeamerfont{caption}{size=\scriptsize}
